# codex-mcp-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.memory/: current-status.md  test-plan-m1.md
docs/: agent-era-career-strategy.md  claude-codex-subagent-qa.md  my-career-strategy.md  subagent-vs-team-comparison.md
examples/: CLAUDE.md.example  codex-bridge.json
examples/claude-commands/: claude-codex-subagent.md  codex-ask.md  codex-explain.md  codex-fix.md  codex-generate.md  codex-refactor.md  codex-review.md  codex-test.md
examples/claude-skills/codex-ask/: SKILL.md
examples/claude-skills/codex-explain/: SKILL.md
examples/claude-skills/codex-fix/: SKILL.md
examples/claude-skills/codex-generate/: SKILL.md
examples/claude-skills/codex-refactor/: SKILL.md
examples/claude-skills/codex-review/: SKILL.md
examples/claude-skills/codex-subagent/: SKILL.md
examples/claude-skills/codex-test/: SKILL.md
scripts/: check_stdout_clean.sh  claude_codex_audit.sh  claude_codex_launcher.sh  it_smoke_codex_bridge.sh
src/codex_bridge_mcp/: __init__.py  config.py  runner.py  server.py  types.py
tests/: test_config.py  test_runner.py  test_server.py
