[project]
name = "codex-mcp-bridge"
version = "0.1.0"
description = "Lightweight stdio MCP server that bridges Claude CLI tools to codex exec"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
codex-mcp-bridge = "codex_bridge_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_bridge_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
